android: RFP: DiskStorageLimit fails
Categories
(Core :: Storage: Quota Manager, defect)
Tracking
()
People
(Reporter: thorin, Assigned: fkilic)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
followup on Bug 1781277
- device: android nightly 142.0a1 build id 2025-07-14-211451 - a device I have that actually has limited space
- rfp enabled
- even did a force quit to be sure
- https://arkenfox.github.io/TZP/tzp.html#storage
storage quota- actual: RFP fail and
6-7GB(i.e 6 to 7 GB - I bucketize it) - expected: RFP pass and
10GB(i.e if exactly 10GB I don't bucketize it)
- actual: RFP fail and
I wonder if piero or someone can test on a linux VM with limited free space to check this is not just an android thing (we have failed to pass RFP info in geckoview before in places - this might be one of them)
| Reporter | ||
Updated•6 months ago
|
| Assignee | ||
Comment 1•6 months ago
•
|
||
does it return 214,748,364 6,871,947,673? we set the android limit to 32gib, so it is 32gibs/5
Comment 2•6 months ago
|
||
I get 50GiB (53687091200) in a 8GB live Linux VM, so spoof is working as expected.
However, I had to restart after applying RFP.
Updated•6 months ago
|
| Reporter | ||
Comment 3•6 months ago
|
||
(In reply to Fatih Kilic [:fkilic] from comment #1)
does it return
214,748,3646,871,947,673? we set the android limit to 32gib, so it is 32gibs/5
Yes, that's it spot on. When/who did we decide to go with that value? (sorry if I missed it) It does not match non-RFP android, which reports 10GB for me (because I have lots of room, I keep forgetting this a new phone with extras - I have 223GB spare). So RFP is deviating here (i.e we are not using a benign value). IMO, we should report what Firefox does when permission is not granted - i.e 10GB
However, I had to restart after applying RFP.
yup, I found that out in https://bugzilla.mozilla.org/show_bug.cgi?id=1781277#c56
| Reporter | ||
Comment 4•6 months ago
|
||
or am i missing something here? do any nonRFP users report 6,871,947,673 ?
| Assignee | ||
Comment 5•6 months ago
|
||
Ah no, nonRFPs don't report 32gb/5. Honestly, it has been a while since we first wrote the patch, so I don't really remember. I know Tom was okay with it but I don't fully remember how, who and why we landed on 32gb. I mean if we really want to do it, we can just delete these and these lines. Just let me know if we want to do that.
Updated•6 months ago
|
| Reporter | ||
Comment 6•6 months ago
•
|
||
Yes please - let's not deviate from common (benign/real-world edit: i.e gecko ones) values - every time we do that, it comes back to be used against us
| Assignee | ||
Comment 7•6 months ago
|
||
Updated•6 months ago
|
Updated•6 months ago
|
Updated•6 months ago
|
Updated•6 months ago
|
Updated•6 months ago
|
Comment 9•6 months ago
|
||
| bugherder | ||
Updated•6 months ago
|
Updated•5 months ago
|
Description
•