Bug 1977787 - Match storage limit to common value/desktop for RFP in Android. r=timhuang

Differential Revision: https://phabricator.services.mozilla.com/D257850